--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/overlay.css" />
     <link rel="stylesheet" href="./styles/configuration.css" />
+    <link rel="stylesheet" href="./styles/game.css" />
   </head>
   <body>
     <div id="backdrop"></div>
@@ -54,24 +55,24 @@
         <button class="btn">Start New Game</button>
       </section>
       <section id="active-game">
-        <article>
-          <h3>You won, <span id="winner-name">PLAYER NAME</span></h3>
+        <article id="game-over">
+          <h2>You won, <span id="winner-name">PLAYER NAME</span></h2>
           <p>Click "Start New Game" above, to start new game!</p>
         </article>
 
         <p>It's your turn <span id="active-player-name">PLAYER NAME</span>!</p>
-        <ol>
-          <li></li>
-          <li></li>
-          <li></li>
-
-          <li></li>
+        <ol id="game-board">
+          <li class="disable">X</li>
           <li></li>
           <li></li>
 
           <li></li>
+          <li class="disable">O</li>
+          <li></li>
+
           <li></li>
           <li></li>
+          <li class="disable">X</li>
         </ol>
       </section>
     </main>
