--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </article>
           </li>
         </ol>
-        <button class="btn">Start New Game</button>
+        <button class="btn" id="start-game-btn">Start New Game</button>
       </section>
       <section id="active-game">
         <article id="game-over">
@@ -66,17 +66,17 @@
 
         <p>It's your turn <span id="active-player-name">PLAYER NAME</span>!</p>
         <ol id="game-board">
-          <li class="disable">X</li>
           <li></li>
           <li></li>
-
-          <li></li>
-          <li class="disable">O</li>
           <li></li>
 
           <li></li>
           <li></li>
-          <li class="disable">X</li>
+          <li></li>
+
+          <li></li>
+          <li></li>
+          <li></li>
         </ol>
       </section>
     </main>
